@@ -11,6 +11,15 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-1-2005-04">Version 1.3.1 (2005-04-??)</a></h2>
 <ul>
+<li>First stab at wrapping some Tiger frameworks:<ul>
+<li><code><span>AppleScriptKit</span></code></li>
+<li><code><span>AppKitScripting</span></code></li>
+<li><code><span>Automator</span></code></li>
+<li><code><span>CoreData</span></code></li>
+<li><code><span>XgridFoundation</span></code></li>
+</ul>
+<p>Documentation and tests not yet written.</p>
+</li>
 <li>More conveniences for <code><span>list</span></code>-like and <code><span>dict</span></code>-like
 objects: <code><span>__reversed__</span></code>, <code><span>reverse</span></code>, <code><span>pop</span></code>,
 <code><span>remove</span></code>, <code><span>fromkeys</span></code>.</li>
